frontend/k8s/deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: ee-frontend
spec:
  replicas: 1
  selector:
    matchLabels:
      app: ee-frontend
  template:
    metadata:
      labels:
        app: ee-frontend
    spec:
      containers:
        - name: ee-frontend
          image: registry/app:tag
          ports:
            - containerPort: 3000
          resources:
            limits:
              cpu: 300m
              memory: 300Mi
            requests:
              cpu: 100m
              memory: 100Mi
          imagePullPolicy: IfNotPresent
          securityContext:
            allowPrivilegeEscalation: false
          livenessProbe:
            httpGet:
              path: /
              port: 3000
            initialDelaySeconds: 20
            timeoutSeconds: 1
            periodSeconds: 10
            failureThreshold: 3
          readinessProbe:
            httpGet:
              path: /
              port: 3000
            initialDelaySeconds: 20
            timeoutSeconds: 1
            periodSeconds: 10
            failureThreshold: 3
