frontend/k8s/service.yml
apiVersion: v1
kind: Service
metadata:
  name: ee-frontend
spec:
  type: ClusterIP
  ports:
    - port: 3000
      name: webui
      targetPort: 3000
      protocol: TCP
  selector:
    app: ee-frontend
