frontend/k8s/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ee-frontend-ingress
  namespace: example-namespace-name
  annotations:
    nginx.ingress.kubernetes.io/ssl-redirect: "false"
spec:
  ingressClassName: nginx
  rules:
    - host: domainname.xyz
      http:
        paths:
          - pathType: ImplementationSpecific
            path: /(/|$)(.*)
            backend:
              service:
                name: ee-frontend
                port:
                  number: 3000
